Clang builds are broken after 8036122

XMLWordPrintable

      openjdk8 is broken after 8036122 if built with clang

      broken configs: clang/linux clang/macos

      hotspot/src/share/vm/memory/filemap.cpp:90:17: error: format string is not a string literal [-Werror,-Wformat-nonliteral]
      tty->vprint(msg, ap);


      hotspot/src/os/linux/vm/os_linux.cpp:5597:34: error: format string is not a string literal [-Werror,-Wformat-nonliteral]
        return ::vsnprintf(buf, count, format, args);

            Assignee:
            Paul Hohensee
            Reporter:
            Vladimir Kempik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated: