8256720: Clang builds are broken after 8036122

This is a workaround for 8256720